--- a/src/common/sass/global.scss
+++ b/src/common/sass/global.scss
@@ -2132,7 +2132,50 @@ nav {
   }
 }
 
-
+.new-pool-banner{
+  width: 1254px;
+  height: 74px;
+  margin: 78px auto 0;
+  background:rgba(255,255,255,1);
+  box-shadow:0px 8px 40px 0px rgba(0,38,115,0.08);
+  border-radius:6px;
+  position: relative;
+  .coin{
+    width: 38px;
+    height: 38px;
+    background-repeat: no-repeat;
+    background-image: url("../image/setcenter_icon_accountsecurity.png");
+    position: absolute;
+    left: 38px;
+    top: 18px;
+  }
+  .title{
+    color: $tipColor;
+    font-size:14px;
+    font-weight:bold;
+  }
+  .check{
+    position: absolute;
+    left: 99px;
+    top: 27px;
+  }
+  button{
+    position: absolute;
+    border-radius: 15px;
+    line-height: 22px;
+    top:22px;
+    width: 93px;
+    height: 30px;
+    font-size:16px;
+    border: none;
+    font-weight:bold;
+    box-shadow:none;
+  }
+  .on{
+    background-color: #1E87F0;
+    color: white;
+  }
+}
 
 
 
