--- a/src/common/sass/common.scss
+++ b/src/common/sass/common.scss
@@ -49,7 +49,8 @@
 
 .table-row-name-area {
   height: 48px;
-  width: 100%;
+  width: 97%;
+  margin: 0 auto;
   background:rgba(250,250,251,1);
   @include display-flex;
   padding-left: 40px;
@@ -61,12 +62,14 @@
 }
 
 .collapse-area {
-  width: 100%;
+  width: 97%;
+  margin: 0 auto;
   position: relative;
 }
 
 .table-detail {
-  width: 100%;
+  width: 97%;
+  margin: 0 auto;
   padding-top: 12px;
   padding-bottom: 12px;
   padding-left: 40px;
