--- a/src/common/sass/rewrite.scss
+++ b/src/common/sass/rewrite.scss
@@ -207,7 +207,7 @@
 }
 
 .ant-pagination-item {
-  width: 24px;
+  //width: 41px !important;
   min-width: 24px;
   height: 22px;
   min-height: 22px;
