--- a/src/common/sass/common.scss
+++ b/src/common/sass/common.scss
@@ -51,7 +51,8 @@
   height: 48px;
   width: 97%;
   margin: 0 auto;
-  background:rgba(250,250,251,1);
+  //background:rgba(250,250,251,1);
+  background-color: #ECF0FA;
   @include display-flex;
   padding-left: 40px;
   h6 {
